--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "==2.2.6"
 djangorestframework = "==3.10.3"
 django-cors-headers = "==3.1.1"
 django-filter = "*"
+stripe = "*"
 
 [requires]
 python_version = "3.6"
